# sparseracer

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  LICENSE  README  commit-notes.txt  config.h  debugconfig.h  runFoxRacer.sh  tags
Debug/: BugDetection  fox-racer  foxracer  makefile  objects.mk  sources.mk
docs/: TODO  data-structures-list.txt  rules-psuedocode.txt
lib/Transforms/: CMakeLists.txt
lib/Transforms/AllocFreeInstrument/: AllocFreeInstrument.cpp  CMakeLists.txt  Makefile
lib/Transforms/DebugInfoPrint/: CMakeLists.txt  DbgInfoPrinter.cpp  Makefile
lib/Transforms/DebugInstrument/: CMakeLists.txt  DebugInstrument.cpp  Makefile
lib/Transforms/FInstrument/: CMakeLists.txt  FInstrument.cpp  Makefile
lib/Transforms/FreeInstrument/: CMakeLists.txt  FreeInstrument.cpp  Makefile
lib/Transforms/Hello/: Hello.cpp
lib/Transforms/LoadStoreInstrument/: CMakeLists.txt  LoadStoreInstrument.cpp  Makefile
lib/Transforms/MemInstrument/: AllocFreeInstrument.cpp  AllocFreeInstrument.h  CMakeLists.txt  FInstrument.cpp  FInstrument.h  LoadStoreInstrument.cpp  LoadStoreInstrument.h  Makefile  MemInstrument.cpp  RunnableInstrument.cpp  RunnableInstrument.h  Utils.cpp  Utils.h
lib/Transforms/MemoryLogger/: CMakeLists.txt  Makefile  MemoryLogger.cpp
logging/: Logger.cpp  Logger.h
main/: main.cpp
parser/: MultiStack.cpp  MultiStack.h  TraceParser.cpp  TraceParser.h
racedetector/: HBGraph.cpp  HBGraph.d  HBGraph.h  UAFDetector.cpp  UAFDetector.h
scripts/: count.sh  filter.sh  runWorkFlow.sh
test/: .example-trace.txt.swp  afterReset1.log.1  (+42 more)
(+140 files in other folders)
