add_subdirectory(Utils)
add_subdirectory(Instrumentation)
add_subdirectory(InstCombine)
add_subdirectory(Scalar)
add_subdirectory(IPO)
add_subdirectory(Vectorize)
add_subdirectory(Hello)
add_subdirectory(MemoryLogger)
add_subdirectory(LoadStoreInstrument)
add_subdirectory(FreeInstrument)
add_subdirectory(DebugInstrument)
add_subdirectory(AllocFreeInstrument)
add_subdirectory(DebugInfoPrint)
add_subdirectory(FInstrument)
add_subdirectory(MemInstrument)
add_subdirectory(ObjCARC)
